--- a/stm32f4xx_drivers/.cproject
+++ b/stm32f4xx_drivers/.cproject
@@ -77,9 +77,8 @@
 					</fileInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
-						<!-- <entry excluding="002led_button.c|main.c|001led_toggle.c|mine_first.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/> -->
-						<!-- <entry excluding="002led_button.c|main.c|001led_toggle.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/> -->
-						<entry excluding="main.c|001led_toggle.c|mine_first.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
+						<!-- <entry excluding="003led_button_external.c|002led_button.c|main.c|001led_toggle.c|mine_first.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/> -->
+						<entry excluding="002led_button.c|main.c|001led_toggle.c|mine_first.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Startup"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="drivers"/>
 					</sourceEntries>
