--- a/nuc001_led/Debug/makefile
+++ b/nuc001_led/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := nuc001_button_interrupt
+BUILD_ARTIFACT_NAME := nuc001_led
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-nuc001_button_interrupt.elf \
+nuc001_led.elf \
 
 MAP_FILES += \
-nuc001_button_interrupt.map \
+nuc001_led.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-nuc001_button_interrupt.list \
+nuc001_led.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: nuc001_button_interrupt.elf secondary-outputs
+main-build: nuc001_led.elf secondary-outputs
 
 # Tool invocations
-nuc001_button_interrupt.elf nuc001_button_interrupt.map: $(OBJS) $(USER_OBJS) /Users/zealzel/STM32CubeIDE/MCU/nuc001_button_interrupt/STM32F767ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "nuc001_button_interrupt.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"/Users/zealzel/STM32CubeIDE/MCU/nuc001_button_interrupt/STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="nuc001_button_interrupt.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+nuc001_led.elf nuc001_led.map: $(OBJS) $(USER_OBJS) /Users/zealzel/STM32CubeIDE/MCU/nuc001_led/STM32F767ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "nuc001_led.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"/Users/zealzel/STM32CubeIDE/MCU/nuc001_led/STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="nuc001_led.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-nuc001_button_interrupt.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "nuc001_button_interrupt.list"
+nuc001_led.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "nuc001_led.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout nuc001_button_interrupt.elf nuc001_button_interrupt.list nuc001_button_interrupt.map
+	-$(RM) default.size.stdout nuc001_led.elf nuc001_led.list nuc001_led.map
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
